--- a/rustserver/package.json
+++ b/rustserver/package.json
@@ -1,7 +1,7 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "vite build && cargo run",
+    "dev": "vite build --watch & nodemon --watch src -e rs --exec cargo run",
     "build": "vite build",
     "lint": "eslint . --ext .js,.jsx --fix"
   },
@@ -11,6 +11,7 @@
     "react-server-dom-esm": "npm:@kentcdodds/tmp-react-server-dom-esm@19.0.0-beta-94eed63c49-20240425"
   },
   "devDependencies": {
+    "nodemon": "^3.1.4",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
