--- a/rustserver-rscx/Cargo.toml
+++ b/rustserver-rscx/Cargo.toml
@@ -15,6 +15,8 @@ convert_case = "0.6.0"
 html-escape = "0.2.13"
 quote = "1.0.33"
 syn = { version = "2.0.29", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [lib]
 name = "jsx"
