--- a/rustserver-rscx/Cargo.toml
+++ b/rustserver-rscx/Cargo.toml
@@ -17,8 +17,8 @@ quote = "1.0.33"
 syn = { version = "2.0.29", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+html_parser = "0.7.0"
 
 [lib]
-name = "jsx"
-path = "src/jsx.rs"
-proc-macro = true
+name = "flight"
+path = "src/flight.rs"
