--- a/rustserver/package.json
+++ b/rustserver/package.json
@@ -6,9 +6,9 @@
     "lint": "eslint . --ext .js,.jsx --fix"
   },
   "dependencies": {
-    "react": "19.0.0-beta-94eed63c49-20240425",
-    "react-dom": "19.0.0-beta-94eed63c49-20240425",
-    "react-server-dom-esm": "npm:@kentcdodds/tmp-react-server-dom-esm@19.0.0-beta-94eed63c49-20240425"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-server-dom-webpack": "19.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
